Fix double border on announcements-only server landing

--- a/app/css/openfusion-theming.scss
+++ b/app/css/openfusion-theming.scss
@@ -129,8 +129,8 @@ $body-bg-dark: #000;
         border-bottom: 1px solid #90d1e4;
     }
 
-    .server-landing .announcements {
-        border-left: 1px solid #90d1e4;
+    .server-landing img {
+        border-right: 1px solid #90d1e4;
     }
 }
 
@@ -218,8 +218,8 @@ $body-bg-dark: #000;
         border-bottom: 1px solid #198754;
     }
 
-    .server-landing .announcements {
-        border-left: 1px solid #198754;
+    .server-landing img {
+        border-right: 1px solid #198754;
     }
 }
 
